Closed
Bug 52716
Opened 25 years ago
Closed 25 years ago
Installer hangs during install - no files copied on RedHat 6.2
Categories
(SeaMonkey :: Installer, defect, P1)
Tracking
(Not tracked)
VERIFIED
FIXED
M18
People
(Reporter: pmock, Assigned: samir_bugzilla)
Details
(Whiteboard: [nsbeta3+])
Build Date & Platform Bug Found:
linux commercial seamonkey build 2000-091408-m18 installed on P200 RedHat 6.2
Overview Description:
This problem maybe related to bug 46558 and 49482.
I ran the Linux installer on my Linux box. I changed the default install
directory to an existing directory and ran. The installer got about 95 percent
then hung downloading/installing the file xpinstall engine. I waited and
eventullay had to kill the operation.
I have tried installing to a local user account on the machine and tried
installing to my default network directory. In both cases, it failed to install.
In desperation, I deleted and re-installed RedHat 6.2 from over the network but
received the same behavior.
Steps to Reproduce:
1) Download the installer file "netscape-i686-pc-linux.gnu-installer.tar.gz"
2) type gunzip *gz
3) type tar xfv *tar
4) type ./netscape-installer
5) Follow the install wizard instructions
I changed my default destination directory to an existing directory that I
have write access.
The progress appears and download starts. It stops on the first download.
Actual Results:
No install file are downloaded. The installer hangs on the first download. I
have to kill the install process.
Expected Results:
It should download all the necessary install file and continue running.
Additional Builds and Platforms Tested On:
Additional Information:
I can download the netscape-i686-pc-linux-gnu.tar.gz file and uncompress the
file and run the commercial build this way.
| Assignee | ||
Updated•25 years ago
|
Priority: P3 → P1
Target Milestone: --- → M18
Changing Component to Installer since this is an Installer bug report.
Component: Installer: XPInstall Engine → Installer
| Assignee | ||
Comment 3•25 years ago
|
||
Jimmy, Grace,
Can you confirm that you successfully installed this build specifically this
morning? Thanks.
| Assignee | ||
Comment 4•25 years ago
|
||
Peter,
What host are you using? Can you enable remote display access (or if running
sshd let me know and I'll ssh in)? Thanks.
I successfully installed 2000-09-14-08-M18. I ran a custom install. I am on a
Sun workstation remotely logged into a Linux machine. I am able to launch the
product without any known problems.
| Assignee | ||
Comment 6•25 years ago
|
||
After working with Peter to isolate this a little more, we found that this is
specific to his host (rubber-ducky). Needs investigation. After downloading
xpcom.xpi the installer hangs when trying to flush the control connection.
Working on a fix.
Keywords: nsbeta3
| Assignee | ||
Comment 7•25 years ago
|
||
Fix in hand: open new connection for each .xpi. Although this should solve the
problem universally, I would like to investigate further why the control
connection gets hosed after a download. Anyways, this should get fixed for
nsbeta3 as it will no doubt RH 6.2 users (developing on RH 6.1 and installer QA
tests on RH 6.0, 6.1 I believe so we didn't see this).
| Assignee | ||
Comment 8•25 years ago
|
||
Fix tested on RH 6.2 and regression tested on RH 6.1. Awaiting review.
| Assignee | ||
Comment 10•25 years ago
|
||
Reviewed fix in hand (awaiting tree opening).
| Assignee | ||
Comment 11•25 years ago
|
||
Fix checked in.
Peter,
I'd appreciate it if you could verify that tomorrow morning's builds work on
your RH 6.2 distribution.
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 12•25 years ago
|
||
Sure Samir,
Changing qa assign to myself.
QA Contact: gbush → pmock
| Reporter | ||
Comment 13•25 years ago
|
||
Update:
Using today commercial linux build 2000-091506-m18 and 2000-091508-m18, I can
successfully perform a "typical" and "complete" install. BUT, these builds do
not successfully launch.
Also, during the installation of the typical install, I received one error
message during the installation of the "Personal Security Manager". The error
message read, "error [-621] An installer module(.xpi) failed to install". The
installer continued until the "Installation Complete" dialog appeared.
As a test, I downloaded the netscape-i686-pc-linux-gnu.tar.gz non-install file
and was able to successfully run the commercial build.
I spoke with Grace and she has experience this problem too.
Leaving bug un-verified until we get a build that successfully installs and
runs.
Comment 14•25 years ago
|
||
So it sounds like *this* problem is fixed, but that you are now hitting at
least one, maybe two different problem. Have bugs been filed for those?
| Assignee | ||
Comment 15•25 years ago
|
||
Dan,
He is hitting only one problem: chrome registration of JARs fail. That's bg
52804.
| Reporter | ||
Comment 16•25 years ago
|
||
Verified as fixed using the linux commercial seamonkey build 2000-091806-m18.
Installer ran fine on typical and complete install option. I can successfully
launch seamonkey after install. NO error dialog.
Status: RESOLVED → VERIFIED
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•