Open a new ftp cxn for every .xpi being downloaded: makes the linux installer work on RH 6.2 distributions. [r=ssu; nsbeta3+ b=52716]